Responsive Issue
Fix issue where resume was not showing up on smaller resolution

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -70,12 +70,22 @@ table, th, td{
 }
 
 @media screen and (max-width: 1100px){
+    #content{
+        padding-right: 50px;
+        padding-left: 50px;
+        font-size: 2vw;
+    }
     #navbar, #navbar a, #navbar a:hover, #navbar a.active, #navbar-right{
         font-size: 25px;
     }
 }
 
 @media screen and (max-width: 580px){
+    #content{
+        padding-right: 20px;
+        padding-left: 20px;
+        font-size: 2vw;
+    }
     #navbar, #navbar a, #navbar a:hover, #navbar a.active, #navbar-right{
         font-size: 14px;
     }
